// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sdk-metadata generates metadata content for services with pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { DummyApi } from '@sap/dummy-package';

const responseData = await DummyApi.DummyFunction().execute({ destinationName:'myDestinationName' });",
      "text": "In the example below you execute the  <code>DummyFunction</code> of the  <code>DummyApi</code> API.",
    },
    "generationSteps": Object {
      "instructions": "<ul>
<li>Download the API specification to your local computer.</li>
<li>Install the generator <code>npm install -g @sap-cloud-sdk/openapi-generator</code></li>
<li>Execute the generator <code>openapi-generator --inputDir <inputDirectory> --outputDir <outputDirectory></code></li>
</ul>
The steps above will generate a basic TypeScript client. For additional options like transpiling to JavaScript etc. visit our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/openapi/generate-openapi-client\\">documentation.</a>",
      "text": "Follow the following generation steps to generate the client.",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/openapi-generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { MyApi } from 'my-npm-package';

const responseData = await MyApi.myFunction().execute({ destinationName:'myDestinationName' });",
      "text": "In the example below you execute the  <code>myFunction</code> of the  <code>MyApi</code> API.",
    },
    "links": Object {
      "apiHubTutorial": Object {
        "name": "API Hub Tutorial",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/execute-openapi-request",
      },
      "featureDocumentation": Object {
        "name": "Feature Documentation",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/use-odata-v2-type-safe-client-for-javascript-typescript",
      },
      "generationManual": Object {
        "name": "Generation Manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/generate-openapi-client",
      },
      "sdkDocumentation": Object {
        "name": "SDK Documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Support",
        "url": "https://github.com/SAP/cloud-sdk-js/issues/new/choose",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": Object {
    "compatibilityNotes": "",
    "dependencyName": "@sap/dummy-package",
    "description": "SAP Cloud SDK for JavaScript: Generated client for OpenAPI service @sap/dummy-package",
    "generatedAt": "/Date(0)/",
    "installLibrarySteps": Object {
      "instructions": "npm i @sap/dummy-package:latest",
      "text": "Execute the following npm command to install the pregenerated client.",
    },
    "repository": "npm",
    "repositoryLink": "https://www.npmjs.com/package/@sap/dummy-package",
    "version": "1.2.3",
  },
  "serviceStatus": Object {
    "status": "certified",
    "statusLongText": "You can download our pregenerated API client for this API.",
    "statusText": "API Client available for download",
  },
}
`;

exports[`sdk-metadata generates metadata content for services without pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { DummyApi } from '@sap/dummy-package';

const responseData = await DummyApi.DummyFunction().execute({ destinationName:'myDestinationName' });",
      "text": "In the example below you execute the  <code>DummyFunction</code> of the  <code>DummyApi</code> API.",
    },
    "generationSteps": Object {
      "instructions": "<ul>
<li>Download the API specification to your local computer.</li>
<li>Install the generator <code>npm install -g @sap-cloud-sdk/openapi-generator</code></li>
<li>Execute the generator <code>openapi-generator --inputDir <inputDirectory> --outputDir <outputDirectory></code></li>
</ul>
The steps above will generate a basic TypeScript client. For additional options like transpiling to JavaScript etc. visit our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/openapi/generate-openapi-client\\">documentation.</a>",
      "text": "Follow the following generation steps to generate the client.",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/openapi-generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Sample code for using the client library",
      "instructions": "import { MyApi } from 'my-npm-package';

const responseData = await MyApi.myFunction().execute({ destinationName:'myDestinationName' });",
      "text": "In the example below you execute the  <code>myFunction</code> of the  <code>MyApi</code> API.",
    },
    "links": Object {
      "apiHubTutorial": Object {
        "name": "API Hub Tutorial",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/execute-openapi-request",
      },
      "featureDocumentation": Object {
        "name": "Feature Documentation",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/use-odata-v2-type-safe-client-for-javascript-typescript",
      },
      "generationManual": Object {
        "name": "Generation Manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/generate-openapi-client",
      },
      "sdkDocumentation": Object {
        "name": "SDK Documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Support",
        "url": "https://github.com/SAP/cloud-sdk-js/issues/new/choose",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": undefined,
  "serviceStatus": Object {
    "status": "verified",
    "statusLongText": "The SAP Cloud SDK team checked for this API that generating a API client works, but no pregenerated client is available. You can generate your own client for this API.",
    "statusText": "API Client generation tested but no download available",
  },
}
`;
